--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -8,7 +8,7 @@
 
 <div class="govuk-o-width-container">
 
-  <a class="govuk-c-back-link" href="/url/of/previous/page">Back</a>
+  <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
 
@@ -80,7 +80,7 @@
         </p>
 
         <div class="form-group">
-          <a href="confirmation-page" class="govuk-c-button">Accept and confirm details</a>
+          <a href="/eviconf" class="govuk-c-button">Accept and confirm details</a>
         </div>
 
       </div>
