--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -8,6 +8,16 @@
 
 <div class="govuk-o-width-container">
 
+  <div class="govuk-c-phase-banner">
+    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+      alpha
+    </strong>
+    <span class="govuk-c-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+  </div>
+
   <a class="govuk-c-back-link" href="/obexpress">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
@@ -32,13 +42,13 @@
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="nationality-2" name="nationality" type="checkbox" value="irish">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-2">
-                  DWP
+                  Other goverment departments
                 </label>
               </div>
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
+          <input class="govuk-c-button" type="submit" value="Accept and Continue">
 
         </form>
 
