--- a/app/views/detailone.html
+++ b/app/views/detailone.html
@@ -8,6 +8,16 @@
 
 <div class="govuk-o-width-container">
 
+  <div class="govuk-c-phase-banner">
+    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+      alpha
+    </strong>
+    <span class="govuk-c-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+  </div>
+
   <a class="govuk-c-back-link" href="/introdetails">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
@@ -24,10 +34,11 @@
           <label class="govuk-c-label" for="full-name">
             Full name
           </label>
-          <input class="govuk-c-input" id="full-name" name="full-name" type="text">
+          <input class="govuk-c-input govuk-!-width-two-thirds" id="full-name" name="full-name" type="text">
 
+          <div>
           <input class="govuk-c-button" type="submit" value="Continue">
-
+          </div>
         </form>
 
       </div>
