--- a/app/views/failure.html
+++ b/app/views/failure.html
@@ -8,7 +8,17 @@
 
 <div class="govuk-o-width-container">
 
-  <a class="govuk-c-back-link" href="screening/initalpage">Back to the beginning</a>
+  <div class="govuk-c-phase-banner">
+    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+      alpha
+    </strong>
+    <span class="govuk-c-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+  </div>
+
+  <a class="govuk-c-back-link" href="/initalpage">Back to the beginning</a>
 
   <main role="main" class="govuk-o-main-wrapper">
 
