--- a/app/views/initalpage.html
+++ b/app/views/initalpage.html
@@ -16,6 +16,16 @@
 
 <div class="govuk-o-width-container">
 
+    <div class="govuk-c-phase-banner">
+      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+        alpha
+      </strong>
+      <span class="govuk-c-phase-banner__text">
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
+    </p>
+    </div>
+
   <div class="govuk-c-breadcrumbs">
     <ol class="govuk-c-breadcrumbs__list">
       <li class="govuk-c-breadcrumbs__list-item">
