various changes to modal bank screens

--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -10,14 +10,20 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    input[type=uname],
-    input[type=password] {
+    .uname,
+    .pword,
+      {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
       display: inline-block;
       border: 1px solid #ccc;
       box-sizing: border-box;
+    }
+
+    .security {
+      width: 2;
+
     }
 
     div[type=modalpage] {
@@ -27,7 +33,7 @@
     /* Set a style for all buttons */
 
     button {
-      background-color: #4CAF50;
+      background-color: #000000;
       color: white;
       padding: 14px 20px;
       margin: 8px 0;
@@ -45,7 +51,7 @@
     .cancelbtn {
       width: auto;
       padding: 10px 18px;
-      background-color: #f44336;
+      background-color: #000000;
     }
 
     /* Center the image and position the close button */
@@ -101,7 +107,7 @@
       margin: 5% auto 15% auto;
       /* 5% from the top, 15% from the bottom and centered */
       border: 1px solid #888;
-      width: 40%;
+      width: 500px;
       /* Could be more or less, depending on screen size */
     }
 
@@ -161,11 +167,13 @@
     .hideMe {
       display: none;
     }
-  </style>
 
-  <div class="govuk-c-phase-banner">
-    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">alpha </strong><span class="govuk-c-phase-banner__text">This is a new service – your <a class="govuk-link" href="#">feedback</a>will help us to improve it. </span></p>
-  </div><a class="govuk-c-back-link" href="/detailtwo">Back</a>
+    hr.style-two {
+      border: 0;
+      height: 1px;
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    }
+  </style>
 
 </head>
 
@@ -173,7 +181,10 @@
 
   <div class="govuk-o-width-container">
 
-    <a class="govuk-c-back-link" href="/detailtwo">Back</a>
+    <div class="govuk-c-phase-banner">
+      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag">alpha </strong><span class="govuk-c-phase-banner__text">This is a new service – your <a class="govuk-link" href="#">feedback</a>will help us to improve it. </span></p>
+    </div><a class="govuk-c-back-link" href="/detailtwo">Back</a>
+
 
     <main role="main" class="govuk-o-main-wrapper">
 
@@ -181,41 +192,23 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-          Who do you actively bank with?
-        </h1>
+          Who do you bank with?
+          </h1>
 
-          <form class="form" action="/obauth" method="get">
-
-            <div class="govuk-c-radios">
-              <fieldset class="govuk-c-fieldset">
-                <legend class="govuk-c-fieldset__legend">
-                  <h1 class="govuk-heading-l">Do you bank with more than one active banking provider?</h1>
-                  <span class="govuk-c-fieldset__hint">This includes partners and etc</span>
-                </legend>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
-                  <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
-                  Yes
-                </label>
-                </div>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
-                  <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
-                  No
-                </label>
-                </div>
-              </fieldset>
-            </div>
+          <form class="form" action="/dwpdetails" method="get">
 
             <label class="govuk-c-label" for="select-1">
-            Please select your banking provider(s) from this list
-          </label>
+            Please select your banking provider(s) from this list and log in to your online banking:
+            </label>
+            <br>
             <select class="govuk-c-select" id="select-1" name="select-1">
-            <option value="1">Moneybags.inc</option>
-            <option value="2" selected>Happy bank</option>
-            <option value="3">Davids</option>
-          </select>
+              <option value="1">Moneybags.inc</option>
+              <option value="2">Togetherbank</option>
+              <option value="3">David's</option>
+            </select>
+            <p>Repeat this process for all banks you have accounts with</p>
             <input class="govuk-c-button" id="myBtn" value="Contact Bank" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
+            <br>
             <input class="govuk-c-button" type="submit" value="Continue">
           </form>
         </div>
@@ -223,24 +216,33 @@
     </main>
   </div>
 
-
   <!-- modal banking window -->
   <div id="id01" class="modal">
 
-    <form class="modal-content animate">
-      <div class="imgcontainer">
+    <form id="test" class="modal-content animate">
+      <div>
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close window">&times;</span>
-        <img src="public/images/logo_mybank_positive2.png" alt="Avatar" class="avatar">
+        <img src="public/images/bank.png" alt="Avatar">
       </div>
 
       <div id="step1" class="container">
         <label for="uname"><b>Username</b></label>
-        <input type="uname" placeholder="Enter Username" name="uname" required>
+        <input class="uname" type="text" placeholder="Enter Username" name="uname" style="width: 100%;
+              padding: 12px 20px;
+              margin: 8px 0;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-sizing: border-box;" required>
 
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input class="pword" type="password" placeholder="Enter Password" name="psw" style="width: 100%;
+              padding: 12px 20px;
+              margin: 8px 0;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-sizing: border-box;" required>
 
-        <button id="login" type="button">Login</button>
+        <button id="login" type="button">Continue</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
           <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
@@ -255,31 +257,31 @@
         <br>
         <br>
         <div class="block">
-          <label for="char1"><b>2nd</b></label>
-          <input type="text" name="char1" maxlength="1" size="2" required>
+          <label for="char1" style="float: left; width: 2em; margin-right: 1em;"><b>2nd</b></label>
+          <input type="password" name="char1" maxlength="1" size="2" required>
         </div>
         <br>
         <div class="block">
-          <label for="char2"><b>6th</b></label>
-          <input type="text" name="char2" maxlength="1" size="2" required>
+          <label for="char2" style="float: left; width: 2em; margin-right: 1em;"><b>6th</b></label>
+          <input type="password" name="char2" maxlength="1" size="2" required>
         </div>
         <br>
         <div class="block">
-          <label for="char3"><b>12th</b></label>
-          <input type="text" name="char3" maxlength="1" size="2" required>
+          <label for="char3" style="float: left; width: 2em; margin-right: 1em;"><b>12th</b></label>
+          <input type="password" name="char3" maxlength="1" size="2" required>
         </div>
         <br>
         <br>
-        <button id="memorable" type="button">Continue</button>
+        <button id="memorable" type="button">Log in securely now</button>
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="document.getElementById( 'id01').style.display='none'" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
       </div>
 
       <div type="modalpage" id="step4" class="hideMe" class="container">
         <h3>Thank you</h3><br>
-        <button id="close" type="button" onclick="document.getElementById('id01').style.display='none'">Close</button>
+        <button id="close" type="button" onclick="document.getElementById( 'id01').style.display='none'">Close</button>
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
@@ -294,19 +296,24 @@
         <p>for each account you select.</p>
 
         <form action="">
-          <input type="checkbox" name="account" value="Current"><b>HappyBank Current Account</b>
+          <hr class="style-two">
+          <input type="checkbox" name="account" value="Current"> <b>Togetherbank Current Account</b>
           <p>Account Number: 123456789</p>
-          <input type="checkbox" name="account" value="Savings"> <b>HappyBank Savings Account</b>
+          <hr class="style-two">
+          <input type="checkbox" name="account" value="Savings"> <b>Togetherbank Savings Account</b>
           <p>Account Number: 987654321</p>
+          <hr class="style-two">
+          <input type="checkbox" name="account" value="Savings"> <b>Togetherbank Cash ISA</b>
+          <p>Account Number: 987654321</p>
+          <hr class="style-two">
         </form>
 
         <button id="approve" type="button">Approve</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="document.getElementById( 'id01').style.display='none'" class="cancelbtn">Cancel</button>
         </div>
       </div>
-
     </form>
   </div>
 
