delete unneccessary banking pages

--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -2,8 +2,6 @@
 
 <head>
 
-  <script src="public/javascripts/jquery-1.11.3.js"></script>
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -23,7 +21,6 @@
 
     .security {
       width: 2;
-
     }
 
     div[type=modalpage] {
@@ -178,13 +175,17 @@
 </head>
 
 <body>
-
   <div class="govuk-o-width-container">
 
     <div class="govuk-c-phase-banner">
-      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag">alpha </strong><span class="govuk-c-phase-banner__text">This is a new service – your <a class="govuk-link" href="#">feedback</a>will help us to improve it. </span></p>
-    </div><a class="govuk-c-back-link" href="/detailtwo">Back</a>
-
+      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+      alpha
+    </strong>
+        <span class="govuk-c-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+      </p>
+    </div>
 
     <main role="main" class="govuk-o-main-wrapper">
 
