fix missing jquery library

--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -2,27 +2,10 @@
 
 <head>
 
+  <script src="public/javascripts/jquery-1.11.3.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .uname,
-    .pword,
-      {
-      width: 100%;
-      padding: 12px 20px;
-      margin: 8px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-
-    .security {
-      width: 2;
-    }
-
     div[type=modalpage] {
       margin: 30px;
     }
