--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Question page
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,13 +6,13 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/detailtwo">Back</a>
+  <a class="govuk-c-back-link" href="/generic-start">Back</a>
 
   <main role="main" class="govuk-o-main-wrapper">
 
@@ -30,7 +24,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Can we collect the information for you?</h1>
+                <h1 class="govuk-heading-xl">Can we collect means assessment evidence information about you?</h1>
                 <span class="govuk-c-fieldset__hint">This will involve automated evidence collection from your bank and the department of work and pensions</span>
               </legend>
               <div class="govuk-c-radios__item">
