--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -195,12 +195,10 @@
             </label>
             <br>
             <select class="govuk-c-select" id="select-1" name="select-1">
-              <option value="1">Moneybags.inc</option>
-              <option value="2">Togetherbank</option>
-              <option value="3">David's</option>
+              <option value="1">Togetherbank</option>
             </select>
             <p>Repeat this process for all banks you have accounts with</p>
-            <input class="govuk-c-button" id="myBtn" value="Contact Bank" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
+            <input class="govuk-c-button" id="myBtn" value="Log in to your bank" onclick="setTimeout(delayModalOpen, 1000)" style="width:auto;" readonly>
             <br>
             <input class="govuk-c-button" type="submit" value="Continue">
           </form>
@@ -212,7 +210,7 @@
   <!-- modal banking window -->
   <div id="id01" class="modal">
 
-    <form id="test" class="modal-content animate">
+    <form id="modal" class="modal-content animate">
       <div>
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close window">&times;</span>
         <img src="public/images/bank.png" alt="Avatar">
@@ -238,7 +236,7 @@
         <button id="login" type="button">Continue</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
       </div>
@@ -267,7 +265,7 @@
         <br>
         <button id="memorable" type="button">Log in securely now</button>
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById( 'id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
       </div>
@@ -275,7 +273,7 @@
       <div type="modalpage" id="step4" class="hideMe" class="container">
         <h3>Thank you</h3><br>
         <p>Put some confirmation text here</p>
-        <button id="close" type="button" onclick="document.getElementById( 'id01').style.display='none'">Close</button>
+        <button id="close" type="button" onclick="setTimeout(delayModalClose, 1000)">Close</button>
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
@@ -304,16 +302,31 @@
         <button id="approve" type="button">Approve</button>
 
         <div class="modal-footer" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById( 'id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
         </div>
       </div>
     </form>
   </div>
 
+  <!--Get the modal-->
   <script>
-    // Get the modal
     var modal = document.getElementById('id01');
   </script>
+
+  <!--Open the modal, with time delay for realism-->
+  <script>
+    function delayModalOpen() {
+      document.getElementById('id01').style.display = 'block';
+    }
+  </script>
+
+  <!--Close the modal, with time delay for realism-->
+  <script>
+    function delayModalClose() {
+      document.getElementById('id01').style.display = 'none';
+    }
+  </script>
+
 
   <!--move from page 1 to page 2 -->
   <script>
