Add secure connection image to banking screens

--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -213,7 +213,7 @@
     <form id="modal" class="modal-content animate">
       <div>
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close window">&times;</span>
-        <img src="public/images/bank.png" alt="Avatar">
+        <img src="public/images/bank.png" alt="Togetherbank logo">
       </div>
 
       <div id="step1" class="container">
@@ -238,6 +238,9 @@
         <div class="modal-footer" style="background-color:#f1f1f1">
           <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
+        </div>
+        <div class="imgcontainer">
+          <img src="public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
 
@@ -268,12 +271,18 @@
           <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
+        <div class="imgcontainer">
+          <img src="public/images/secure-connection.png" alt="padlock">
+        </div>
       </div>
 
       <div type="modalpage" id="step4" class="hideMe" class="container">
         <h3>Thank you</h3><br>
         <p>Put some confirmation text here</p>
         <button id="close" type="button" onclick="setTimeout(delayModalClose, 1000)">Close</button>
+        <div class="imgcontainer">
+          <img src="public/images/secure-connection.png" alt="padlock">
+        </div>
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
@@ -303,6 +312,9 @@
 
         <div class="modal-footer" style="background-color:#f1f1f1">
           <button type="button" onclick="setTimeout(delayModalClose, 1000)" class="cancelbtn">Cancel</button>
+        </div>
+        <div class="imgcontainer">
+          <img src="public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
     </form>
