--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -19,22 +19,45 @@
   </div>
 
   <main role="main" class="govuk-o-main-wrapper">
-
+  <div class="govuk-o-main-wrapper">
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
+      <h1 class="govuk-heading-xl">
+        We automatically capture your means evidence
+      </h1>
 
-        <h1 class="govuk-heading-xl">
-          Playback
-        </h1>
+        <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">means assessment</a></p>
 
-        <p class="govuk-body">We are now ready to help you thorugh the express evidence process</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Employed income</li>
+          <li>Childcare</li>
+          <li>Private pension</li>
+          <li>Employer pension</li>
+          <li>Board or rent</li>
+          <li>Maintainance payments</li>
+          <li>Housing costs</li>
+        </ul>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/obresults" role="button">Continue</a>
+        <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">capital assessment</a></p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Bank savings account</li>
+          <li>Bank current account</li>
+          <li>Building society account</li>
+          <li>ISAs</li>
+        </ul>
+
+        <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records</p>
+
+      </div>
+
+    </div>
+
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/empstatus" role="button">Continue</a>
 
       </div>
     </div>
   </main>
-</div>
 
 {% endblock %}
