Add evidence check screen and later screens

--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Question page
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,52 +6,52 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
   <main role="main" class="govuk-o-main-wrapper">
-  <div class="govuk-o-main-wrapper">
-    <div class="govuk-o-grid">
-      <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+    <div class="govuk-o-main-wrapper">
+      <div class="govuk-o-grid">
+        <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-      <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-xl">
         We automatically capture your means evidence
       </h1>
 
-        <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">means assessment</a></p>
+          <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">means assessment</a></p>
 
-        <ul class="govuk-list govuk-list--bullet">
-          <li>Employed income</li>
-          <li>Childcare</li>
-          <li>Private pension</li>
-          <li>Employer pension</li>
-          <li>Board or rent</li>
-          <li>Maintainance payments</li>
-          <li>Housing costs</li>
-        </ul>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Employed income</li>
+            <li>Childcare</li>
+            <li>Private pension</li>
+            <li>Employer pension</li>
+            <li>Board or rent</li>
+            <li>Maintainance payments</li>
+            <li>Housing costs</li>
+          </ul>
 
-        <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">capital assessment</a></p>
+          <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">capital assessment</a></p>
 
-        <ul class="govuk-list govuk-list--bullet">
-          <li>Bank savings account</li>
-          <li>Bank current account</li>
-          <li>Building society account</li>
-          <li>ISAs</li>
-        </ul>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Bank savings account</li>
+            <li>Bank current account</li>
+            <li>Building society account</li>
+            <li>ISAs</li>
+          </ul>
 
-        <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records</p>
+          <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records</p>
 
-      </div>
-
-    </div>
-
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/empstatus" role="button">Continue</a>
+        </div>
 
       </div>
+
+      <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/empstatus" role="button">Continue</a>
+
     </div>
-  </main>
+</div>
+</main>
 
 {% endblock %}
