--- a/app/views/dwpresult.html
+++ b/app/views/dwpresult.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Question page
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,10 +6,10 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
   <main role="main" class="govuk-o-main-wrapper">
