--- a/app/views/empstatus.html
+++ b/app/views/empstatus.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Question page
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Question page {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,10 +6,10 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
   <a class="govuk-c-back-link" href="./eviconf">Back</a>
@@ -58,26 +52,26 @@
 
           <div class="govuk-c-radios">
             <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-m">Do you recieve any benefits from the state?</h1>
-                <span class="govuk-c-fieldset__hint">This includes Universal credit, housing benefit and disability benefits</span>
-              </legend>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
+              <h1 class="govuk-heading-m">Do you recieve any benefits from the state?</h1>
+              <span class="govuk-c-fieldset__hint">This includes Universal credit, housing benefit and disability benefits</span>
+            </legend>
+            <div class="govuk-c-radios__item">
+              <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
+              <label class="govuk-c-label govuk-c-radios__label" for="changed-name-1">
                   Yes
                 </label>
-              </div>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
-                <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
+            </div>
+            <div class="govuk-c-radios__item">
+              <input class="govuk-c-radios__input" id="changed-name-2" name="changedName" type="radio" value="no" checked>
+              <label class="govuk-c-label govuk-c-radios__label" for="changed-name-2">
                   No
                 </label>
-              </div>
+            </div>
           </div>
 
         </form>
-
-        <form class="form" action="/obresults" method="get">
+        </br>
+        <form class="form" action="/identify-evidence" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
