Tidy up navigation, wordings

--- a/app/views/bank-success.html
+++ b/app/views/bank-success.html
@@ -16,19 +16,18 @@
     </p>
   </div>
 
-  <a class="govuk-c-back-link" href="/mandatory-evidence">Back</a>
-
-
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          This is the next page of the process and the end of this journey.
+          We successfully connected to your bank
         </h2>
 
-        <p class="govuk-body">It needs to be customised to look like that page.</p>
+        <p class="govuk-body">Now connect to DWP and HMRC for the quickest evidence submission.</p>
+
+        <a class="govuk-c-button govuk-c-button" href="/dwpdetails" role="button">Continue</a>
 
       </div>
 
