--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -12,6 +12,8 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/benefits-kind">Back</a>
+
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
