--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -1,10 +1,4 @@
-{% extends "layout.html" %}
-
-{% block page_title %}
-  Check your answers
-{% endblock %}
-
-{% block content %}
+{% extends "layout.html" %} {% block page_title %} Check your answers {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -12,10 +6,10 @@
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
       alpha
     </strong>
-    <span class="govuk-c-phase-banner__text">
+      <span class="govuk-c-phase-banner__text">
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
-  </p>
+    </p>
   </div>
 
   <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
@@ -25,8 +19,8 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1 class="govuk-heading-l">
-          Check your details submitting your application
+        <h1 class="govuk-heading-xl">
+          We found these details
         </h1>
 
         <!-- only add a heading for a list if there is more than one list -->
