--- a/app/views/dwpdetails.html
+++ b/app/views/dwpdetails.html
@@ -21,7 +21,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Retrieve your benefit / salary evidence
+          Your NI Number and Date of Birth
         </h1>
 
         <form class="form" action="/dwpconf" method="post">
