--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -12,14 +12,16 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/dwpconf">Back</a>
+
   <main role="main" class="govuk-o-main-wrapper">
-    <div class="govuk-o-main-wrapper">
+    <div>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-        We automatically capture your means evidence
-      </h1>
+            We automatically capture your means evidence
+          </h1>
 
           <p class="govuk-body">Evidence we collect for <a class="govuk-link" href="#">means assessment</a></p>
 
@@ -42,13 +44,13 @@
             <li>ISAs</li>
           </ul>
 
-          <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records</p>
+          <p class="govuk-body">We may need help with other types of evidence that we can't see from your bank statements or HMRC records.</p>
 
         </div>
 
       </div>
 
-      <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/empstatus" role="button">Continue</a>
+      <a class="govuk-c-button govuk-c-button" href="/empstatus" role="button">Continue</a>
 
     </div>
 </div>
