--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -14,6 +14,9 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/empstatus">Back</a>
+
+
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
