--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -188,7 +188,7 @@
           Who do you bank with?
           </h1>
 
-          <form class="form" action="/dwpdetails" method="get">
+          <form class="form" action="/bank-success" method="get">
 
             <label class="govuk-c-label" for="select-1">
             Please select your banking provider(s) from this list and log in to your online banking:
@@ -197,7 +197,7 @@
             <select class="govuk-c-select" id="select-1" name="select-1">
               <option value="1">Togetherbank</option>
             </select>
-            <p>Repeat this process for all banks you have accounts with</p>
+            <p>Repeat this process for all banks you have accounts with.</p>
             <input class="govuk-c-button" id="myBtn" value="Log in to your bank" onclick="setTimeout(delayModalOpen, 1000)" style="width:auto;" readonly>
             <br>
             <input class="govuk-c-button" type="submit" value="Continue">
