--- a/app/views/mandatory-evidence.html
+++ b/app/views/mandatory-evidence.html
@@ -12,11 +12,12 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/means-result">Back</a>
+
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
-
 
         <h1 class="govuk-heading-xl">
           Mandatory evidence
@@ -26,11 +27,11 @@
 
         <form class="form" action="/end" method="post">
 
-
           <div class="govuk-c-checkboxes__item">
             <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox">
             <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that you have read and fully understood the above by ticking this box</label>
           </div>
+          </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">
 
