--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -14,6 +14,8 @@
     </p>
   </div>
 
+  <a class="govuk-c-back-link" href="/valuables">Back</a>
+
   <main role="main" class="govuk-o-main-wrapper">
 
     <div class="govuk-o-grid">
