--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -25,7 +25,7 @@
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
                 <h1 class="govuk-heading-xl">Can we collect means assessment evidence information about you?</h1>
-                <span class="govuk-c-fieldset__hint">This will involve automated evidence collection from your bank and the department of work and pensions</span>
+                <span class="govuk-c-fieldset__hint">This will involve automated evidence collection from your bank, HMRC and the Department of Work and Pensions</span>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="changed-name-1" name="changedName" type="radio" value="yes">
